--- a/index.html
+++ b/index.html
@@ -70,10 +70,7 @@
           data-typed-items="Ingeniero en Sistemas, Especialista en Legal Tech & Innovation, Auditor Lider ISO 27001:2013, Auditor Interno ISO 9001:2015, SCRUM Master"></span>
       </p>
       <div class="social-links">
-        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-        <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://www.linkedin.com/in/focampok/" class="linkedin" target="_blank"><i
             class="bx bxl-linkedin"></i></a>
       </div>
@@ -964,7 +961,7 @@
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/focampok/" class="linkedin" target="_blank"><i
             class="bx bxl-linkedin"></i></a>
