--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Francisco Ocampo</h1>
+      <h1>Francisco J. Ocampo K.</h1>
       <p><span class="typed"
           data-typed-items="Ingeniero en Sistemas, Especialista en Legal Tech & Innovation, Auditor Lider ISO 27001:2013, Auditor Interno ISO 9001:2015, SCRUM Master"></span>
       </p>
