--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+
+  
+		
 </head>
 
 <body>
@@ -332,16 +335,68 @@
       </div>
     </section> -->
     <!-- End Facts Section -->
+   
+
 
     <!-- ======= Skills Section ======= -->
-    <!-- <section id="skills" class="skills section-bg">
+    <section id="skills" class="skills section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h2>Tecnologías</h2>
+        </div>
+
+        <div class="row skills-content">
+
+          <div class="col-lg-12">
+
+            <div class="progress">
+
+              <i class='bx bxl-python bx-lg'></i>
+              <i class='bx bxl-java bx-lg'></i>
+              <i class='bx bxl-nodejs bx-lg'></i>
+              <i class='bx bxl-javascript bx-lg'></i>
+              <i class='bx bxl-visual-studio bx-lg'></i>
+              <i class='bx bxl-android bx-lg'></i>
+              <i class='bx bxl-aws bx-lg'></i>
+              <i class='bx bxl-mongodb bx-lg'></i>
+              <i class='bx bxl-git bx-lg'></i>
+              <i class='bx bxl-github bx-lg'></i>
+              <i class='bx bxl-windows bx-lg'></i>
+              <i class='bx bxl-php bx-lg'></i>
+              <i class='bx bxl-data bx-lg'></i>
+              <i class='bx bxl-adobe bx-lg'></i>
+              <i class='bx bxl-visa bx-lg'></i>
+              <i class='bx bxl-mastercard bx-lg'></i>
+              <i class='bx bxl-tux bx-lg'></i>
+              <i class='bx bxl-nodejs bx-lg'></i>
+              <i class='bx bxl-javascript bx-lg'></i>
+              <i class='bx bxl-visual-studio bx-lg'></i>
+              <i class='bx bxl-nodejs bx-lg'></i>
+              <i class='bx bxl-javascript bx-lg'></i>
+              <i class='bx bxl-visual-studio bx-lg'></i>
+              <i class='bx bxl-nodejs bx-lg'></i>
+              <i class='bx bxl-javascript bx-lg'></i>
+              <i class='bx bxl-visual-studio bx-lg'></i>
+            </div>
+
+          </div>
+
+          
+
+        </div>
+
+      </div>
+    </section>
+
+    
+
+    <!-- ======= Skills Section ======= -->
+    <section id="skills" class="skills section-bg">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Habilidades</h2>
         </div>
 
         <div class="row skills-content">
@@ -349,7 +404,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Liderazgo <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -357,17 +412,25 @@
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">Trabajo en equipo <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">Toma de decisiones <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Ética y responsabilidad <i class="val">100%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -377,15 +440,15 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Análisis de datos <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+              <span class="skill">Gestión del tiempo <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -393,9 +456,17 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Negociación <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Administración de presuspuesto <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -405,8 +476,7 @@
         </div>
 
       </div>
-    </section> -->
-    <!-- End Skills Section -->
+    </section>
 
     <!-- ======= Resume Section ======= -->
     <!-- <section id="resume" class="resume">
