--- a/cv/index.html
+++ b/cv/index.html
@@ -51,9 +51,7 @@
     <meta name="description" content="Conoce toda mi trayectoria profesional desde mi Curriculum Vitae" />
     <meta property="og:url" content="https://www.focampo.com/" />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Oscar León | Programador Web" />
     <meta property="og:description" content="Conoce toda mi trayectoria profesional desde mi Curriculum Vitae" />
-    <meta property="og:title" content="Oscar León | Programador Web" />
     <meta property="og:image" content="https://focampo.com/assets/source/img/about-img.png" />
     <meta property="og:locale" content="es_ES" />
 
@@ -197,12 +195,12 @@
                     <h2 class="section-title-2">Social</h2>
 
                     <div class="social_container bdgrid">
-                        <a href="https://www.linkedin.com/in/oscarleonapp/" target="_blank" class="social_link">
-                            <i class="bx bxl-linkedin-square social_icon"></i> @focampok
+                        <a href="https://www.linkedin.com/in/focampok/" target="_blank" class="social_link">
+                            <i class="bx bxl-linkedin-square social_icon"></i> f.ocampo.k
                         </a>
 
-                        <a href="https://www.facebook.com/oscarleonapp/" target="_blank" class="social_link">
-                            <i class="bx bxl-instagram social_icon"></i>Pendiente
+                        <a href="" target="_blank" class="social_link">
+                            <i class="bx bxl-whatsapp social_icon"></i>+502 5858 9393
                         </a>
 
                         <a href="https://www,focampo.com/" target="_blank" class="social_link">
@@ -291,6 +289,10 @@
                                 <span class="skills_circle"></span>Gestión de Riesgos
                             </li>
 
+                            <li class="skills_name">
+                                <span class="skills_circle"></span>Innovación y adaptabilidad
+                            </li>
+
                         </ul>
                     </div>
                 </section>
@@ -344,8 +346,8 @@
                         Mi enfoque se orienta hacia la ejecución eficaz de nuevas tecnologías en procesos de
                         transformación
                         digital,
-                        así como la salvaguarda de información
-                        crítica para las organizaciones.
+                        así como garantizar la confidencialidad, integridad y disponibilidad de la información de los sistemas
+                        y activos digitales.
                     </p>
                 </section>
                 <br>
@@ -370,9 +372,7 @@
                                 <!-- <p class="experience_description">JEFE INMEDIATO: </p> -->
                                 <!-- <p class="experience_description">CONTACTO: +502 </p> -->
                                 <p class="experience_description">
-                                    Identificar oportunidades y supervisando la implementation de proyectos para
-                                    impulsar el crecimiento
-                                    y la eficiencia organizacional. Además, este rol requiere la gestión efectiva.
+                                    Implementar el desarrollo y la implementación de estrategias innovadoras, gestionando proyectos clave para impulsar el crecimiento y la transformación empresarial. Supervisa equipos interdisciplinarios, asegurando la alineación con los objetivos estratégicos y el cumplimiento de plazos y presupuestos.
                                 </p>
                             </div>
 
@@ -392,9 +392,7 @@
                                 <!-- <p class="experience_description">JEFE INMEDIATO: </p> -->
                                 <!-- <p class="experience_description">CONTACTO: +502 </p> -->
                                 <p class="experience_description">
-                                    Identificar oportunidades y supervisando la implementation de proyectos para
-                                    impulsar el crecimiento
-                                    y la eficiencia organizacional. Además, este rol requiere la gestión efectiva.
+                                    Gestionar la infraestructura tecnológica de la empresa, asegurando su funcionamiento eficiente y seguro. Supervisa el desarrollo y la implementación de soluciones informáticas para optimizar procesos y soportar las operaciones diarias.
                                 </p>
                             </div>
                         </div>
@@ -435,7 +433,7 @@
 
                             <div class="education_data bd-grid">
                                 <h3 class="education_title">ADEN INTERNATIONAL BUSSINES SCHOOL</h3>
-                                <span class="education_studies">Specialization in Legal-Tech and Innovation 2023</span>
+                                <span class="education_studies">Specialization in Legal-Tech and Innovation</span>
                                 <span class="education_year">2023</span>
                             </div>
                         </div>
@@ -448,7 +446,7 @@
 
                             <div class="education_data bd-grid">
                                 <h3 class="education_title">UNIVERSIDAD DE SAN CARLOS DE GUATEMALA</h3>
-                                <span class="education_studies">Ingeniería en Cincias y Sistemas</span>
+                                <span class="education_studies">Ingeniería en Ciencias y Sistemas</span>
                                 <span class="education_year">2017</span>
                             </div>
                         </div>
@@ -470,28 +468,46 @@
 
                         <div class="certificate_container bd-grid">
                             <div class="certificate_content">
-                                <h3 class="certificate_title">Scrum Master</h3>
+                                <h3 class="certificate_title">ArcX Cyber Threat Intelligence 101</h3>
                                 <!-- <p class="certificate_description">Entidad</p> -->
                             </div>
 
                             <div class="certificate_container bd-grid">
                                 <div class="certificate_content">
-                                    <h3 class="certificate_title">Blockchain Profesional</h3>
+                                    <h3 class="certificate_title">Certiprof: Scrum Master Professional Certificate</h3>
                                     <!-- <p class="certificate_description">Entidad</p> -->
                                 </div>
 
                                 <div class="certificate_container bd-grid">
                                     <div class="certificate_content">
-                                        <h3 class="certificate_title">Network Security</h3>
+                                        <h3 class="certificate_title">Cisco: Introduction to Cybersecurity</h3>
                                         <!-- <p class="certificate_description">Entidad</p> -->
                                     </div>
 
                                     <div class="certificate_container bd-grid">
                                         <div class="certificate_content">
-                                            <h3 class="certificate_title">Foundation Level Threat Intelligence Analyst
-                                            </h3>
+                                            <h3 class="certificate_title">ISC2: ISC2 Candidate</h3>
                                             <!-- <p class="certificate_description">Entidad</p> -->
                                         </div>
+
+                                        <div class="certificate_container bd-grid">
+                                            <div class="certificate_content">
+                                                <h3 class="certificate_title">Certiprof: Blockchain Professional Certificate</h3>
+                                                <!-- <p class="certificate_description">Entidad</p> -->
+                                            </div>
+
+                                            <div class="certificate_container bd-grid">
+                                                <div class="certificate_content">
+                                                    <h3 class="certificate_title">Cisco: Network Security</h3>
+                                                    <!-- <p class="certificate_description">Entidad</p> -->
+                                                </div>
+
+                                                <div class="certificate_container bd-grid">
+                                                    <div class="certificate_content">
+                                                        <h3 class="certificate_title"> Certiprof: Certified ISO 27001:2013 Lead Auditor</h3>
+                                                        <!-- <p class="certificate_description">Entidad</p> -->
+                                                    </div>
+
 
                 </section>
                 <br><br>
