--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@
         </li>
         <li><a href="#about" class="nav-link scrollto"><i class="bi bi-person-circle"></i> <span>¿Quién
               soy?</span></a></li>
-        <li><a href="cv/index.html" class="nav-link scrollto" target="_blank"><i
-              class="bi bi-file-earmark-pdf-fill"></i>
-            <span>CV</span></a>
-        </li>
         <li><a href="#services" class="nav-link scrollto"><i class="bi bi-briefcase-fill"></i>
             <span>Servicios</span></a>
         </li>
@@ -62,6 +58,10 @@
         <li><a href="#certs" class="nav-link scrollto"><i class="bi bi-pen-fill"></i>
           <span>Certificaciones</span></a>
       </li>
+      <li><a href="cv/index.html" class="nav-link scrollto" target="_blank"><i
+        class="bi bi-file-earmark-pdf-fill"></i>
+      <span>CV</span></a>
+  </li>
 
         <!-- <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li> -->
       </ul>
@@ -250,7 +250,7 @@
               <h4><a href="">Inteligencia Artificial</a></h4>
               <p>
                 Inteligencia Artificial es la simulación de procesos de inteligencia humana por parte de sistemas
-                computacionales.</p>
+                computacionales. Uso avanzado de ChatGPT (Prompts), implementación de ChatBot y experiencias de usuario</p>
             </div>
           </div>
           <!-- End Servicio #3 -->
@@ -1068,9 +1068,6 @@
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>Francisco Ocampo</span></strong>. Todos los derechos reservados.
-      </div>
-      <div class="credits">
-        Desarrollado por <a href="https://oscarleon.app/">OSCARLEON</a>
       </div>
     </div>
   </footer><!-- End Footer -->
