--- a/cv/index.html
+++ b/cv/index.html
@@ -191,7 +191,7 @@
                             <i class="bx bxl-linkedin-square social_icon"></i> f.ocampo.k
                         </a>
 
-                        <a href="" target="_blank" class="social_link">
+                        <a href="https://api.whatsapp.com/send?phone=50258589393&text=Hola%20Francisco%2C%20quisiera%20conocer%20m%C3%A1s%20acerca%20de%20sus%C2%A0servicios" target="_blank" class="social_link">
                             <i class="bx bxl-whatsapp social_icon"></i>+502 5858 9393
                         </a>
 
@@ -506,20 +506,23 @@
 
                 <!--========== INTERESTS ==========-->
                 <section class="interests section">
-                    <h2 class="section-title">Más información</h2>
+                    <h2 class="section-title"></h2>
 
                     <div class="interests_container bd-grid">
+                       
+                        <!--
                         <div class="interests_content">
                             <img src="../assets/img/qr/cv.png" alt="" class="qr-img">
-                            <!-- <i class="bx bx-headphone interests_icon"></i> -->
                             <span class="interests_name">CV Digital</span>
                         </div>
 
                         <div class="interests_content">
                             <img src="../assets/img/qr/portafolio.png" alt="" class="qr-img">
-                            <!-- <i class="bx bxs-plane-alt interests_icon"></i> -->
+                            
                             <span class="interests_name"><a href="../index.html">Portafolio</a></span>
                         </div>
+                       -->
+
                         <!-- 
                         <div class="interests_content">
                             <i class="bx bx-book interests_icon"></i>
