--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           data-typed-items="Ingeniero en Sistemas, Especialista en Legal Tech & Innovation, Auditor Lider ISO 27001:2013, Auditor Interno ISO 9001:2015, SCRUM Master, Consultor ChatGPT, Analista de Ciberseguridad"></span>
       </p>
       <div class="social-links">
-        <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=50258589393&text=Hola%20Francisco%2C%20quisiera%20conocer%20m%C3%A1s%20acerca%20de%20sus%C2%A0servicios" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <a href="https://www.linkedin.com/in/focampok/" class="linkedin" target="_blank"><i
             class="bx bxl-linkedin"></i></a>
       </div>
@@ -1061,7 +1061,7 @@
       <div class="social-links">
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-        <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send?phone=50258589393&text=Hola%20Francisco%2C%20quisiera%20conocer%20m%C3%A1s%20acerca%20de%20sus%C2%A0servicios" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
         <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
         <a href="https://www.linkedin.com/in/focampok/" class="linkedin" target="_blank"><i
             class="bx bxl-linkedin"></i></a>
